# slambot

./: CMakeLists.txt  README.md  package.xml
config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  slambot.yaml  slambot_control.yaml
launch/: slambot.launch  slambot_autonomous.launch  slambot_control.launch  slambot_teleop.launch
rviz/: slambot.rviz
src/: tf_broadcast.cpp
src/autonomous/: tf_broadcaster.cpp
src/teleop/: joystick_teleop.py  ps4_controller.py
urdf/: slambot.urdf.xacro
world/: slambot.world
